feat: 深入 synchronized